data/derived/fa15/progs/unify/prog0450.ml.out
Characters 71-91:
  (10*o, bigAdd(mulByDigit o*m, l1) l)
               ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
